force-app/main/default/objects/Provisioning_Completed__e/Provisioning_Completed__e.object-meta.xml
<CustomObject>
    <description
  >Fired by provisioning automation when a provisioning attempt finishes (success or failure).</description>
    <label>Provisioning Completed</label>
    <pluralLabel>Provisioning Completed Events</pluralLabel>
</CustomObject>