force-app/main/default/objects/Provisioning_Completed__e/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description
  >Human-readable reason when Status is Failure or Partial.</description>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>