force-app/main/default/objects/Provisioning_Completed__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Outcome of the provisioning attempt. Expected values: Success, Failure, Partial. (Platform-event fields cannot be Picklists, so this is Text with an enumerated convention.)</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>